# First

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: FUNDING.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/src/: .env.example  __init__.py  config.py  database.py  logging_config.py  models.py
backend/src/alembic/: env.py
backend/src/api/: __init__.py  crud.py  dependencies.py  main.py  schemas.py
backend/src/api/middleware/: __init__.py  cors.py  error_handler.py  rate_limit.py
backend/src/api/routers/: __init__.py  auth.py  subscriptions.py  users.py
backend/src/api/routers/auth/: __init__.py  jwt.py  password.py  router.py  schemas.py  turnstile.py
backend/src/api/routers/subscriptions/: __init__.py  crud.py  router.py  schemas.py
backend/src/api/routers/users/: __init__.py  crud.py  router.py  schemas.py
backend/src/clients/: __init__.py
backend/src/core/: __init__.py  compare_publish.py  consumer.py  scrape.py  utils.py
backend/src/core/clients/: __init__.py  redis_client.py
backend/src/core/notifications/: __init__.py  base.py  discord.py  telegram.py
backend/src/core/processing/: __init__.py  comparator.py  normalizer.py
backend/src/core/queue/: __init__.py  consumer.py  main.py  publisher.py
backend/src/core/scraping/: __init__.py  browser.py  job_scraper.py  main.py  selectors.py
backend/src/core/telegram/: __init__.py  bot.py
